--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,14 @@
 project:
   type: website
   output-dir: docs
+  resources: 
+  - "files/*"
+  - "files/images/*"
+  - "art22/*"
+  - "art22/images/*"
+
+execute:
+  cache: true
 
 website:
   title: "Justin Liu"
@@ -15,11 +23,9 @@ website:
 format:
   html:
     theme:
-      light: flatly
-      dark: darkly
+      - darkly
     css: styles.css
     toc: true
     embed-resources: true
 
 editor: visual
-
